tests/ui/lexer/emoji-in-lifetime.stderr
error: lifetimes cannot have emoji: `'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦`
  --> $DIR/emoji-in-lifetime.rs:3:6
   |
LL |     'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦,
   |     -^^^^^^------^^^^^^^^

error: lifetimes cannot start with a number: `'12`
  --> $DIR/emoji-in-lifetime.rs:4:6
   |
LL |     '12,
   |     -^-

error: lifetimes cannot have emoji: `'aрџђ›`
  --> $DIR/emoji-in-lifetime.rs:5:7
   |
LL |     'aрџђ›,
   |     --^^

error: invalid lifetime name: `\'1\u{1f41b}`
  --> $DIR/emoji-in-lifetime.rs:6:5
   |
LL |     '1рџђ›,
   |     ^^^^

error: lifetimes cannot start with a number: `'1`
  --> $DIR/emoji-in-lifetime.rs:7:5
   |
LL |     '1,
   |     ^^

error: lifetimes cannot have emoji: `'рџђ›`
  --> $DIR/emoji-in-lifetime.rs:17:6
   |
LL |     'рџђ›: {
   |     -^^

error: aborting due to 6 previous errors

