tests/ui/lexer/emoji-in-lifetime.rs
// #141081
fn bad_lifetime_name<
    'рџђ›рџђ›рџђ›familyрџ‘ЁвЂЌрџ‘©вЂЌрџ‘§вЂЌрџ‘¦,//~ ERROR: lifetimes cannot have emoji
    '12, //~ ERROR: lifetimes cannot start with a number
    'aрџђ›, //~ ERROR: lifetimes cannot have emoji
    '1рџђ›, //~ ERROR: invalid lifetime name
    '1, //~ ERROR: lifetimes cannot start with a number
    'aвЂЊb // bare zero-width-joiners are accepted as XID_Continue
>() {}






fn main() {
    'рџђ›: { //~ ERROR: lifetimes cannot have emoji
        todo!();
    };
}
